fix: #36 profile picture not blurry anymore

--- a/src/main/resources/fxml/styles/userTab.css
+++ b/src/main/resources/fxml/styles/userTab.css
@@ -92,13 +92,12 @@
 /*
 * Image
 */
-#profilepicture {
-
-}
 
 #pictureBox {
     -fx-border-color: -primary;
     -fx-border-style: solid;
     -fx-border-width: 1;
+    -fx-border-insets: 5;
+    -fx-border-radius: 5;
 
 }
